@@ -9,6 +9,7 @@
 ## -------------------------------------------
 ## This file is part of eCos, the Embedded Configurable Operating System.
 ## Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
+## Copyright (C) 2003 Andrew Lunn
 ##
 ## eCos is free software; you can redistribute it and/or modify it under
 ## the terms of the GNU General Public License as published by the Free
@@ -59,7 +60,7 @@ cdl_package CYGPKG_DEVS_FLASH_ARM_E7T {
 
     # Arguably this should do in the generic package
     # but then there is a logic loop so you can never enable it.
-    cdl_option CYGINT_DEVS_FLASH_SST_39VF400_REQUIRED {
+    cdl_option CYGINT_DEVS_FLASH_SST_39VFXXX_REQUIRED {
         display   "E7T has SST39VF400 FLASH part fitted"
         default_value 0
         requires !CYGINT_DEVS_FLASH_AMD_AM29XXXXX_REQUIRED
